# sqd

./: .gitignore  Makefile.am  README.md  configure.ac
etc/: Makefile.am
src/: Makefile.am  main.cc
test/: Makefile.am
